styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');

:root {
  --color-primary: #f5f5f5;
  --color-secondary: #2575fc;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Roboto', sans-serif;
}

body {
  /* bg gradient bubble gum blue to pink */

  background: linear-gradient(pink 0%, white 100%);
  background-repeat: no-repeat;
  background-attachment: fixed;
}

li {
  list-style: none;
}

a {
  text-decoration: none;
}

h3 {
  font-size: 46px;
}

img {
  width: 100%;
  -drag: none;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -ms-user-select: none;
}

.disable-scroll {
  height: 100vh;
  overflow-y: hidden;
  position: fixed;
}
.hide {
  display: none;
}

.nav {
  display: flex;
}
.navbar {
  display: flex;
  justify-content: space-around;
  align-items: center;
  height: 100px;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
}

.nav-social-icons {
  display: flex;
  align-items: center;
  gap: 4px;
  padding: 0 20px;
  margin: 0px 20px;
  border-right: 2px solid black;
}

.nav-icon {
  color: black;
  font-size: 20px;
  margin: 0;
  padding: 0;
}

.nav-icon:hover {
  color: crimson;
  transition: ease 0.1s;
}

.nav-links {
  display: flex;
  gap: 10px;
}

.nav-links > li > a {
  color: black;
  font-size: 20px;
}

.nav-links > li > :hover {
  color: crimson;
  transition: ease 0.1s;
}

.nav-logo {
  width: 100px;
}

.big-background-image {
  background-image: url('/assets/images/photography/landscape15.jpg');
  background-size: cover;
  /* background-position: center; */
  height: calc(100vh + 100px);
  width: 100%;
  position: absolute;
  top: 0;
  z-index: -1;
}

.hero-container {
  height: 100vh;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.hero-content {
  display: flex;
  justify-content: center;
  padding: 60px;
  background-color: rgba(0, 0, 0, 0.2);
  border-radius: 24px;
  max-width: 800px;
}

.hero-text {
  color: white;
  text-align: left;
}
.para > p {
  font-size: 20px;
}
.para > :nth-child(1) {
  font-size: 30px;
  font-weight: 700;
  margin: 20px 0;
}

.hero-text > h1 {
  font-size: 56px;
}

.hero-text > :nth-child(2) {
  font-size: 15px;
  font-style: italic;
}

.tag-btn {
  margin-top: 60px;
  padding: 10px 15px;
  border: none;
  border-radius: 5px;
  background-color: whitesmoke;
  color: black;
  font-size: 20px;
  font-weight: 500;
  border: 2px white solid;
  cursor: pointer;
}

.tag-btn:hover {
  color: white;
  border-color: crimson;
  background-color: rgba(0, 0, 0, 0.4);
  transition: ease 0.2s;
}

.services {
  background: linear-gradient(90deg, #6a11cb 0%, #2575fc 100%);
  color: whitesmoke;
  padding-bottom: 20px;
}

.services-tag {
  padding-top: 40px;
  text-align: center;
  color: white;
  font-weight: 700;
  font-style: italic;
  padding-bottom: 40px;
  text-decoration: underline;
}

.services-container {
  display: flex;
  gap: 5%;
  justify-content: center;
  align-items: center;
  height: 600px;
  padding: 0 20px;
}
.service-card > h3 {
  text-align: center;
  flex-shrink: 0;
}

.service-card > p {
  padding: 20px 0;
  text-align: center;
}
.service-card {
  display: flex;
  padding: 20px 0px;
  flex-direction: column;
  justify-content: center;
  width: 600px;
}

.service-title {
  text-align: center;
}

.service-img {
  border-radius: 20px;
  overflow: hidden;
  margin: 20px 0px;
}

.newsletter-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;

  height: 400px;
  background-color: #1b262c;
}

/* testimonials */

.review-container {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0 auto;
  width: 100%;
  max-width: 1200px;
  padding: 0 32px 32px 32px;
}

.reviews-tag {
  text-align: center;
  margin: 2rem 0;
}

.review {
  background-color: white;
  height: 350px;
  margin: 0 1rem;
  border: 1px solid #ccc;
  border-radius: 5px;
  padding: 1rem;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

.review:hover {
  transform: scale(1.1);
  transition: ease 0.4s;
}

.review-image {
  width: 50%;
  overflow: hidden;
  border-radius: 50%;
  margin: auto;
}
.review-image > img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

/* newsletter */
.newsletter-tag {
  text-align: center;
  font-weight: 700;
  font-style: italic;
  font-size: 50px;
  padding-bottom: 40px;
  padding-right: 5px;

  background: -webkit-linear-gradient(90deg, #6a11cb 0%, #2575fc 100%);
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
}

.newsletter-form {
  display: flex;
  flex-direction: column;
}

.newsletter-email-input {
  padding: 10px 15px;
  border: none;
  border-radius: 5px;
  text-align: center;
  background-color: whitesmoke;
  color: black;
  font-size: 20px;
  font-weight: 500;
  border: 2px white solid;
  cursor: pointer;
  margin-bottom: 20px;
}
.newsletter-btn {
  display: block;
  padding: 16px 40px;
  width: 400px;
  background-color: transparent;
  border: white solid 2px;
  color: white;
  font-size: 2rem;
  margin: 30px;
  cursor: pointer;
}

.newsletter-btn:hover {
  background-color: white;
  color: black;
  transition: ease 0.2s;
}
.mobile-nav-toggle {
  display: none;
}

/* GALLERY */

.slideshow-container {
  position: relative;
  margin: 40px auto;
  width: 80%;
  border: 4px solid #f1f1f1;
  z-index: 1;
}

.gallery-container {
  padding-bottom: 40px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.gallery-title {
  font-size: 54px;
  text-align: center;
  color: black;
  margin: 50px 0px;
}

.filter-menu {
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-radius: 86px;
  width: 200px;
  height: 60px;
  margin: 30px 0px;
  background-color: rgba(0, 0, 0, 0.5);
  /* padding: 0px 20px; */
}

.filter-menu .menu-icon {
  height: 60px;
  width: 60px;
  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.5);
  padding: 10px;
  border-radius: 50%;
  overflow: hidden;
  cursor: pointer;
  margin: 10px;
  filter: opacity(20%);
  transition: ease-in 0.2s;
}

.menu-icon > img {
  position: relative;
  left: 8px;
  width: 24px;
}

.filter-menu .active {
  filter: opacity(100%);
  transition: ease-in 0.2s;
}

.grid {
  margin: auto;
  max-width: 1000px;
  align-items: center;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-auto-rows: minmax(100px, auto);
  gap: 10px;
  padding: 30px 70px;
}
.grid img {
  border-radius: 12px;
}
.grid img:hover {
  transform: scale(1.25);
  transition: width 2s, height 2s, transform 0.5s;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

@media only screen and (max-width: 768px) {
  .grid {
    grid-template-columns: repeat(2, 200px);
  }
}
@media only screen and (max-width: 578px) {
  .grid {
    grid-template-columns: repeat(1, 200px);
  }
}

/* =======================footer======================= */

footer {
  padding: 20px 0px;
  background: #2575fc;
  color: #fff;
}

.footer-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 auto;
  padding: 0 2rem;
  max-width: 700px;
}

.footer-logo {
  width: 75px;
}

.footer-links > ul > li > a {
  color: black;
}

.footer-links > ul > li > a:hover {
  transition: ease 0.2s;
  color: crimson;
}
.footer-links > ul {
  display: flex;
  gap: 20px;
  justify-content: space-between;
  align-items: center;
}

.footer-social-icons > ul {
  display: flex;
  gap: 1rem;
  font-size: 12px;
}

@media screen and (max-width: 768px) {
  /* hide last child of review */

  .hero-text {
    text-align: center;
  }

  .hero-image {
    display: none;
  }

  .hero-content {
    flex-direction: column;
  }
  .review:nth-child(3) {
    display: none;
  }

  .review {
    width: 80%;
    margin: 1rem 10px;
  }
}

/* =================Medium Screens================= */

@media screen and (max-width: 578px) {
  html {
    overflow-x: hidden;
  }

  .active {
    display: flex;
  }

  .services-container {
    gap: 20px;
    margin: 30 auto;
    margin-top: 30px;
  }

  .mobile-nav-toggle {
    display: block;
    z-index: 999;
  }
  .nav-logo {
    z-index: 100;
    opacity: 0.8;
  }

  .nav {
    position: fixed;
    padding-top: 80px;
    top: -100%;
    left: 0;
    width: 100vw;
    height: 400px;
    background: whitesmoke;
    transition: top 1s;
    z-index: 400;
  }

  .nav.active {
    overflow-y: hidden;
    top: 0;
    transition: all ease 1s;
  }

  .nav-links {
    border-top: 1px black solid;
    padding-top: 70px;
    flex-direction: column;
    text-align: center;
    margin: 50px auto;
    gap: 0px;
    width: 100%;
  }

  .nav-links > li {
    padding: 10px;
  }

  .nav-links > li:hover {
    background-color: rgba(0, 0, 0, 0.6);
  }
  .nav-links > li > a {
    color: cadetblue;
    margin: auto;
  }

  .nav-social-icons {
    display: none;
  }

  .review {
    width: 80%;
    margin: 1rem 10px;
  }

  .review-text > p {
    font-size: 1em;
  }

  .footer-container {
    flex-direction: column;
    row-gap: 20px;
  }
}

/* =================Small Screens================= */

@media only screen and (max-width: 576px) {
  html {
    overflow-x: hidden;
  }

  .hero-text {
    overflow-x: hidden;
  }
  .newsletter-email-input {
    width: 300px;
  }

  .newsletter-btn {
    width: 250px;
  }

  .hero-content {
    width: 100vw;
  }
  .services-container {
    flex-direction: column;
    height: 1000px;
    margin-top: 30px;
  }
  .service-card {
    width: 340px;
    margin: auto;
  }

  .review {
    column-gap: 20px;
  }

  .review-container {
    flex-direction: column;
  }

  .review:nth-child(3) {
    display: block;
  }
}

